Apps/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stirling-pdf
  name: stirling-pdf-service
  namespace: stirling-pdf
spec:
  ports:
    - name: "8080"
      port: 80
      targetPort: 8080
  selector:
    app: stirling-pdf
