Apps/stirling-pdf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-ingress
  labels:
    app: stirling-pdf
  namespace: stirling-pdf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Use cert-manager for TLS
    nginx.ingress.kubernetes.io/rewrite-target: /        # Rewrite all paths to root
    nginx.ingress.kubernetes.io/proxy-body-size: "0"    # Increase max upload size
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pdf.dassidias.com
    secretName: stirling-pdf-tls  # Secret where TLS cert will be stored
  rules:
  - host: pdf.dassidias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling-pdf-service  # Route to this service
            port:
              number: 80                 # Service port to route to
---
